crates/formatter/tests/snapshots/snapshots__migrations__000070_deployment_graph.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agents add column last_connected_replica_id uuid;
