crates/formatter/tests/snapshots/snapshots__migrations__000071_provisioner_log_lines.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table provisioner_job_logs drop column id;

alter table provisioner_job_logs add column id uuid not null default gen_random_uuid(
);
