crates/formatter/tests/snapshots/snapshots__migrations__000072_add_agent_connection_timeout_and_troubleshooting_url.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agents drop column connection_timeout_seconds;

alter table workspace_agents drop column troubleshooting_url;
