crates/formatter/tests/snapshots/snapshots__migrations__000074_workspace_resources_job_id_idx.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create index workspace_resources_job_id_idx on workspace_resources using btree(
	job_id
);
