crates/formatter/tests/snapshots/snapshots__migrations__000077_job_logs_job_id_id_index.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index provisioner_job_logs_id_job_id_idx;
