crates/formatter/tests/snapshots/snapshots__migrations__000077_job_logs_job_id_id_index.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create index provisioner_job_logs_id_job_id_idx
on provisioner_job_logs
using btree (job_id, id asc);
