crates/formatter/tests/snapshots/snapshots__migrations__000078_workspace_agents_resource_id_idx.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create index workspace_agents_resource_id_idx on workspace_agents using btree(
	resource_id
);
