crates/formatter/tests/snapshots/snapshots__migrations__000079_provisioner_daemon_tags.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table provisioner_daemons drop column tags;
alter table provisioner_jobs drop column tags;
